--- a/src/app/user-login/reset-password/reset-password.component.html
+++ b/src/app/user-login/reset-password/reset-password.component.html
@@ -3,12 +3,12 @@
         <form>
           <h3>Muuta salasana</h3>
             <div class="form-group">
-                <label for="resetPasswordEmail">E-mail</label>
+                <label for="resetPasswordEmail">Email</label>
                 <input type="email"
                        name="email"
                        class="form-control"
                        id="resetPasswordEmail"
-                       placeholder="Syötä e-mail">
+                       placeholder="Syötä email">
             </div>
             <button type="submit" class="btn btn-outline">Muuta salasana <i class="fas fa-paper-plane"></i></button>
         </form>
