--- a/src/app/user-login/login/login.component.html
+++ b/src/app/user-login/login/login.component.html
@@ -4,9 +4,9 @@
             <div class="form-group">
                 <h3>Kirjaudu sisään</h3>
                 <label for="email">Email</label>
-                <input type="text" 
-                formControlName="email" 
-                class="form-control" 
+                <input type="text"
+                formControlName="email"
+                class="form-control"
                 placeholder="Email"
                 [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
                 <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
@@ -15,9 +15,9 @@
             </div>
             <div class="form-group">
                 <label for="password">Salasana</label>
-                <input type="password" 
-                formControlName="password" 
-                class="form-control" 
+                <input type="password"
+                formControlName="password"
+                class="form-control"
                 placeholder="Salasana"
                 [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
                 <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
@@ -30,7 +30,7 @@
                     Kirjaudu sisään
                 </button>
             </div>
-            <a class="nav-link" routerLink="/register" routerLinkActive="active">Ei tiliä? Luo uusi tästä
+            <a class="nav-link" routerLink="/register" routerLinkActive="active">Ei tiliä? Luo uusi tili tästä
             </a>
             <a class="nav-link" routerLink="/reset-password" routerLinkActive="active">Unohdin salasanani
             </a>
