--- a/src/app/categories/activities/activityDetails/activity-details/activity-details.component.html
+++ b/src/app/categories/activities/activityDetails/activity-details/activity-details.component.html
@@ -3,7 +3,7 @@
   <div *ngIf="currentActivity">
     <div class="row">
       <div class="col-md-6">
-        <div *ngIf="currentActivity.description.images.length > 0; else elseBlock">
+        <div *ngIf="currentActivity.description.images?.length > 0; else elseBlock">
           <img src={{currentActivity.description.images[0].url}} alt="place-picture" class="w-100" />
         </div>
         <ng-template #elseBlock>
