--- a/src/app/categories/activities/activities.component.css
+++ b/src/app/categories/activities/activities.component.css
@@ -13,7 +13,7 @@
   -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
 }
 
-a {
+.box a {
   text-decoration: none;
 }
 
@@ -128,6 +128,10 @@ h2 {
 .card-body {
   /* text-decoration: none; */
   color: black;
+}
+
+.card-body a:hover {
+  text-decoration: underline;
 }
 
 @media only screen and (min-width: 426px) and (max-width: 768px) {
