add temperature to navbar

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -14,7 +14,7 @@
         <li class="nav-item" id="weather">
           <a class="nav-link" routerLink="/weather" routerLinkActive="active">
               <img class="weatherIcon" src="https://openweathermap.org/img/wn/{{Weatherdata.current_icon}}@2x.png" alt="icon">
-              <!-- {{Weatherdata.current_temp}}°C --></a>
+              {{Weatherdata.current_temp}}°C</a>
         </li>
                     <!-- <li class="nav-item" id="weather">
               <a class="nav-link" routerLink="/weather" routerLinkActive="active"><i class="fas fa-cloud-sun fa-2x"></i></a>
