--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+<nav ngxHideOnScroll [propertyUsedToHide]="'top'" [valueWhenHidden]="'-100px'" [valueWhenShown]="'0px'" class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <div id="logodesktop">
       <a class="nav-link navbar-brand"  routerLink="/frontpage" routerLinkActive="active"><img src="../../assets/SirkaLogotesti.png" alt=""></a>
@@ -12,9 +12,9 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item" id="weather">
-          <a class="nav-link" routerLink="/weather" routerLinkActive="active">
-              <img class="weatherIcon" src="https://openweathermap.org/img/wn/{{Weatherdata.current_icon}}@2x.png" alt="icon">
-              {{Weatherdata.current_temp}}°C</a>
+            <a class="nav-link btn btn-sm" id="temperature" routerLink="/weather" routerLinkActive="active">
+              {{Weatherdata.current_temp}}°C<img class="weatherIcon" src="https://openweathermap.org/img/wn/{{Weatherdata.current_icon}}@2x.png" alt="icon">
+              </a>
         </li>
                     <!-- <li class="nav-item" id="weather">
               <a class="nav-link" routerLink="/weather" routerLinkActive="active"><i class="fas fa-cloud-sun fa-2x"></i></a>
