Edit weather icon in navbar

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,7 +13,7 @@
       <ul class="navbar-nav">
         <li class="nav-item" id="weather">
           <a class="nav-link" routerLink="/weather" routerLinkActive="active">
-              <img class="weatherIcon" src="https://openweathermap.org/img/wn/{{Weatherdata.current_icon}}@2x.png" alt="icon">
+              <img class="weatherIcon" src="{{Weatherdata.current_icon}}" alt="icon">
               <!-- {{Weatherdata.current_temp}}°C --></a>
         </li>
                     <!-- <li class="nav-item" id="weather">
