--- a/src/app/weather/weather.component.html
+++ b/src/app/weather/weather.component.html
@@ -1,4 +1,4 @@
-<section [ngStyle]="{'background-image':Weatherdata.currentHour_isDay ? 'url(../../assets/daysky.jpg)' : 'url(../../assets/nightsky.jpg)'}">
+<section [ngStyle]="{'background':Weatherdata.currentHour_isDay ? 'linear-gradient(#F88585, #F8D49B)' : 'linear-gradient(#28A9AC, #C2F0EE)'}">
     <div class="weather">
         <div class="weatherNow">
             <h1 class="item1">Helsinki</h1>
