--- a/src/app/categories/activities/activities.component.css
+++ b/src/app/categories/activities/activities.component.css
@@ -66,7 +66,7 @@ h1 {
   font-weight: 700;
   text-align: center;
   padding: 30px;
-  margin-top: 35px;
+  margin-top: 40px;
   color: #fff;
 }
 
@@ -146,10 +146,12 @@ h2 {
   }
 
   .box a {
+    width: 30%;
     height: 150px;
   }
 
   p {
+    height: 100px;
     padding-top: 35%;
   }
 
