--- a/src/app/categories/events/events.component.css
+++ b/src/app/categories/events/events.component.css
@@ -123,8 +123,11 @@ h2 {
 
 @media only screen and (min-width: 426px) and (max-width: 768px) {
 
-  .top {
+  .filter {
     margin: 0;
+    box-shadow: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
   }
 
   h1 {
@@ -140,14 +143,14 @@ h2 {
     height: 150px;
   }
 
-  p {
+  .box p {
     padding-top: 35%;
   }
 
   }
 
 
-  @media only screen and (max-width: 425px) {
+@media only screen and (max-width: 425px) {
 
   h1 {
       font-size: 2rem;
@@ -155,7 +158,7 @@ h2 {
       padding: 3%;
     }
 
-    .top {
+    .filter {
       margin: 0;
     }
 
