--- a/src/app/user-login/register/register.component.html
+++ b/src/app/user-login/register/register.component.html
@@ -3,17 +3,17 @@
       <form [formGroup]="form" (ngSubmit)="onSubmit()">
         <h3>Rekisteröi uusi käyttäjä</h3>
           <div class="form-group">
-              <label for="name">Etunimi</label>
+              <label for="name">Nimi</label>
               <input type="text" formControlName="name" class="form-control" placeholder="Nimi" [ngClass]="{ 'is-invalid': submitted && f.name.errors }" />
               <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
-                  <div *ngIf="f.name.errors.required">Etunimi vaaditaan</div>
+                  <div *ngIf="f.name.errors.required">Nimi vaaditaan</div>
               </div>
           </div>
           <div class="form-group">
-              <label for="email">Sukunimi</label>
+              <label for="email">Sähköposti</label>
               <input type="text" formControlName="email" class="form-control" placeholder="Email" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
               <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
-                  <div *ngIf="f.email.errors.required">Sukunimi vaaditaan</div>
+                  <div *ngIf="f.email.errors.required">Sähköposti vaaditaan</div>
               </div>
           </div>
           <div class="form-group">
