--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -13,12 +13,9 @@
       <ul class="navbar-nav">
         <li class="nav-item" id="weather">
             <a class="nav-link btn btn-sm" id="temperature" routerLink="/weather" routerLinkActive="active">
-              {{Weatherdata.current_temp}}°C<img class="weatherIcon" src="https://openweathermap.org/img/wn/{{Weatherdata.current_icon}}@2x.png" alt="icon">
+              {{Weatherdata.current_temp}}°C<img class="weatherIcon" src="{{Weatherdata.current_icon}}" alt="icon">
               </a>
         </li>
-                    <!-- <li class="nav-item" id="weather">
-              <a class="nav-link" routerLink="/weather" routerLinkActive="active"><i class="fas fa-cloud-sun fa-2x"></i></a>
-            </li> -->
         <li class="nav-item" id="login">
           <a class="nav-link" routerLink="/login" routerLinkActive="active"><i class="fas fa-user fa-2x"></i></a>
       </li>
