--- a/src/app/categories/activities/activities.component.css
+++ b/src/app/categories/activities/activities.component.css
@@ -1,6 +1,5 @@
 .filter {
   margin: 2%;
-  height: 200px;
   background: rgb(93, 232, 148);
   background: linear-gradient(
    185deg,
@@ -94,8 +93,9 @@ h2 {
   -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58); */
 }
 
-.app-map {
+app-map {
   padding: 20px;
+  position: relative;
 }
 
 /* list section*/
@@ -136,7 +136,7 @@ h2 {
 
 @media only screen and (min-width: 426px) and (max-width: 768px) {
 
-  .top {
+  .filter {
     margin: 0;
   }
 
@@ -150,7 +150,6 @@ h2 {
   }
 
   .box a {
-    width: 30%;
     height: 150px;
   }
 
