--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -12,7 +12,7 @@
     <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item" id="weather">
-            <a class="nav-link btn btn-sm" id="temperature" routerLink="/weather" routerLinkActive="active">
+            <a class="nav-link btn btn-sm" id="temperature" routerLink="/weather" routerLinkActive="active"> Helsinki
               {{Weatherdata.current_temp}}°C<img class="weatherIcon" src="{{Weatherdata.current_icon}}" alt="icon">
               </a>
         </li>
