--- a/src/app/categories/activities/activityDetails/activity-details/activity-details.component.html
+++ b/src/app/categories/activities/activityDetails/activity-details/activity-details.component.html
@@ -20,7 +20,7 @@
         </div>
       </div>
       <p class="mt-3 lead"> {{currentActivity.description.body | stripHTML}} </p>
-      <a type="button" class="btn btn-danger"><i class="bi bi-heart"></i> Lisää suosikkeihin</a>
+      <a type="button" (click)="addFavourite()" class="btn btn-danger"><i class="bi bi-heart"></i> Lisää suosikkeihin</a>
     </div>
   </div>
 </div>
