--- a/src/app/categories/events/eventDetails/event-details/event-details.component.html
+++ b/src/app/categories/events/eventDetails/event-details/event-details.component.html
@@ -22,7 +22,7 @@
           </div>
       </div>
         <p class="mt-3 lead"> {{currentEvent.description.body | stripHTML}} </p>
-        <a type="button" class="btn btn-danger"><i class="bi bi-heart"></i> Lisää suosikkeihin</a>
+        <a type="button" (click)="addFavourite()" class="btn btn-danger"><i class="bi bi-heart"></i> Lisää suosikkeihin</a>
 
     <section class="nearby">
       <!-- <app-map></app-map> -->
