--- a/src/app/favourites/favourites.component.html
+++ b/src/app/favourites/favourites.component.html
@@ -1,2 +1,27 @@
-<p>favourites works!</p>
-{{favourites}}
+<a routerLink="/favourites" type="button" class="btn btn-outline-secondary">Takaisin</a>
+<div class="container">
+  <div *ngIf="favourite">
+    <div class="row">
+      <div class="col-md-6">
+        <div *ngIf="favourite.description.images?.length > 0; else elseBlock">
+          <img src={{favourite.description.images[0].url}} alt="place-picture" class="w-100" />
+        </div>
+        <ng-template #elseBlock>
+          <img src="" alt="">
+        </ng-template>
+      </div>
+      <div class="col-md-6">
+        <div class="row align-items-center h-100">
+            <div class="col">
+                <h1 class="display-4">{{favourite.name.fi}}</h1>
+                <p><strong>Missä: </strong> {{favourite.location.address.street_address}}, {{favourite.location.address.locality}}</p>
+                <a href="{{favourite.info_url}}" class="btn btn-outline-primary" role="button" aria-pressed="true">Verkkosivu</a>
+            </div>
+        </div>
+      </div>
+      <p class="mt-3 lead"> {{favourite.description.body | stripHTML}} </p>
+      <a type="button" (click)="addFavourite()" class="btn btn-danger"><i class="bi bi-heart"></i> Lisää suosikkeihin</a>
+    </div>
+  </div>
+</div>
+
