--- a/src/app/favourites/favourites.component.html
+++ b/src/app/favourites/favourites.component.html
@@ -1,27 +1,61 @@
-<a routerLink="/favourites" type="button" class="btn btn-outline-secondary">Takaisin</a>
+<section class="filter">
+  <div class="row">
+    <div class="col-lg-6">
+      <h1>Tutustu lähiympäristösi tapahtumiin</h1>
+    </div>
+    <div class="col-lg-6">
+      <div class="box">
+        <a
+          class="box1"
+          routerLink="/categories/favourites"
+          routerLinkActive="active"
+          ><p>Tapahtumat</p></a
+        >
+        <a
+          class="box2"
+          routerLink="/categories/activities"
+          routerLinkActive="active"
+          ><p>Aktiviteetit</p></a
+        >
+        <a
+          class="box3"
+          routerLink="/categories/places"
+          routerLinkActive="active"
+          ><p>Paikat</p></a
+        >
+      </div>
+    </div>
+  </div>
+</section>
+
 <div class="container">
-  <div *ngIf="favourite">
-    <div class="row">
-      <div class="col-md-6">
-        <div *ngIf="favourite.description.images?.length > 0; else elseBlock">
-          <img src={{favourite.description.images[0].url}} alt="place-picture" class="w-100" />
+  <h2 class="otsikko">Suosikit</h2>
+  <div class="card" style="max-width: 900px; ">
+    <div class="searchfavourite mb-3">
+      <input type="text" class="form-control" name="search"[(ngModel)]="searchText" autocomplete="off" placeholder="Etsi suosikeista">
+    </div>
+    <div class="row g-0" *ngFor="let favourite of favourites | filter: searchText | slice: 0:100">
+      <div class="col-md-4">
+        <div class="card-img-wrapper">
+          <div *ngIf="favourite.description.images?.length > 0; else elseBlock">
+            <img
+              src="{{ favourite.description.images[0].url }}"
+              alt="favourite-picture"
+              class="card-img-top"
+            />
+          </div>
+          <ng-template #elseBlock>
+            <img src="" alt="" />
+          </ng-template>
         </div>
-        <ng-template #elseBlock>
-          <img src="" alt="">
-        </ng-template>
       </div>
-      <div class="col-md-6">
-        <div class="row align-items-center h-100">
-            <div class="col">
-                <h1 class="display-4">{{favourite.name.fi}}</h1>
-                <p><strong>Missä: </strong> {{favourite.location.address.street_address}}, {{favourite.location.address.locality}}</p>
-                <a href="{{favourite.info_url}}" class="btn btn-outline-primary" role="button" aria-pressed="true">Verkkosivu</a>
-            </div>
-        </div>
+      <div class="col-md-8">
+          <h5 class="card-title mb-0">{{ favourite.name.fi }}</h5>
+          <p class="card-text mb-0">
+            {{ favourite.description.body | stripHTML }}
+          </p>
+          <!-- <button routerLink="/place-details/{{place.id}}">Tutustu lisää!</button> -->
       </div>
-      <p class="mt-3 lead"> {{favourite.description.body | stripHTML}} </p>
-      <a type="button" (click)="addFavourite()" class="btn btn-danger"><i class="bi bi-heart"></i> Lisää suosikkeihin</a>
     </div>
   </div>
 </div>
-
