--- a/src/app/categories/events/events.component.html
+++ b/src/app/categories/events/events.component.html
@@ -9,19 +9,19 @@
           class="box1"
           routerLink="/categories/events"
           routerLinkActive="active"
-          ><p>Tapahtumat</p></a
+          ><p class="navText">Tapahtumat</p></a
         >
         <a
           class="box2"
           routerLink="/categories/activities"
           routerLinkActive="active"
-          ><p>Aktiviteetit</p></a
+          ><p class="navText">Aktiviteetit</p></a
         >
         <a
           class="box3"
           routerLink="/categories/places"
           routerLinkActive="active"
-          ><p>Paikat</p></a
+          ><p class="navText">Paikat</p></a
         >
       </div>
     </div>
@@ -39,14 +39,10 @@
       <input type="text" class="form-control" name="search"[(ngModel)]="searchText" autocomplete="off" placeholder="Etsi tapahtumia">
     </div>
     <div class="row g-0" *ngFor="let event of events | filter: searchText | slice: 0:100">
-      <div class="col-md-4">
+      <div class="col-md-4 ">
         <div class="card-img-wrapper">
           <div *ngIf="event.description.images?.length > 0; else elseBlock">
-            <img
-              src="{{ event.description.images[0].url }}"
-              alt="event-picture"
-              class="card-img-top"
-            />
+            <img src="{{ event.description.images[0].url }}" alt="event-picture" class="card-img-top" />
           </div>
           <ng-template #elseBlock>
             <img src="" alt="" />
@@ -70,8 +66,6 @@
             }}</small>
           </p>
         </a>
-        <!-- VÄLIAIKAINEN NAPPULA -->
-        <!-- <button routerLink="/event-details/{{event.id}}">Tutustu lisää!</button> -->
       </div>
     </div>
   </div>
