--- a/src/app/categories/places/places.component.css
+++ b/src/app/categories/places/places.component.css
@@ -77,7 +77,7 @@ h2 {
 /* map section */
 .nearby {
   margin: 2% 5%;
-  color: black;
+  /* color: black; */
 }
 
 /*.nearby h2 {
@@ -92,8 +92,9 @@ app-map {
 
 /*list section */
 .card-img-wrapper {
-  width: 255px;
-  height: 200px;
+  /* width: 255px;
+  height: 200px; */
+  margin: 2%;
 }
 
 .card {
@@ -115,10 +116,6 @@ app-map {
 
 .card-body h5{
   font-weight: bolder !important;
-}
-
-.card-img-wrapper img{
-  max-width: 300px;
 }
 
 .card-body {
@@ -149,8 +146,12 @@ app-map {
     height: 150px;
   }
 
-  p {
+  .navText p {
     padding-top: 35%;
+  }
+
+  .col-md-8  {
+    border-bottom: 1px solid lightgray;
   }
 
   }
@@ -173,22 +174,19 @@ app-map {
     }
 
     .box a {
-      height: 100px;
-    }
-
-    a {
       width: 30%;
       background-color: transparent;
       padding: 0;
+      height: 100px;
     }
 
-    p {
+    .navText p {
       font-size: 1rem;
       padding-top: 25%;
     }
 
-    .trending h2 {
-      font-size: 1.5rem;
+    .col-md-8  {
+      border-bottom: 1px solid lightgray;
     }
 
   }
