--- a/src/app/categories/places/places.component.html
+++ b/src/app/categories/places/places.component.html
@@ -9,19 +9,19 @@
           class="box1"
           routerLink="/categories/events"
           routerLinkActive="active"
-          ><p>Tapahtumat</p></a
+          ><p class="navText">Tapahtumat</p></a
         >
         <a
           class="box2"
           routerLink="/categories/activities"
           routerLinkActive="active"
-          ><p>Aktiviteetit</p></a
+          ><p class="navText">Aktiviteetit</p></a
         >
         <a
           class="box3"
           routerLink="/categories/places"
           routerLinkActive="active"
-          ><p>Paikat</p></a
+          ><p class="navText">Paikat</p></a
         >
       </div>
     </div>
@@ -34,7 +34,7 @@
 
 <div class="container">
     <h2 class="otsikko">Kaikki paikat</h2>
-  <div class="card mb-3" style="max-width: 900px">
+  <div class="card" style="max-width: 900px">
     <div class="searchEvent mb-3">
       <input type="text" class="form-control" name="search"[(ngModel)]="searchText" autocomplete="off" placeholder="Etsi paikkoja">
     </div>
@@ -42,7 +42,7 @@
       <div class="col-md-4">
         <div class="card-img-wrapper">
        <div *ngIf="place.description.images?.length > 0; else elseBlock">
-            <img src="{{ place.description.images[0].url }}" alt="" />
+            <img src="{{ place.description.images[0].url }}" alt="place-img"  class="card-img-top" />
           </div>
           <ng-template #elseBlock>
             <img src="" alt="" />
@@ -60,7 +60,6 @@
               place.location.address.street_address
             }}</small>
           </p>
-          <!-- <button routerLink="/place-details/{{place.id}}">Tutustu lisää!</button> -->
         </a>
       </div>
     </div>
