--- a/src/app/categories/activities/activities.component.css
+++ b/src/app/categories/activities/activities.component.css
@@ -34,17 +34,14 @@
   padding: 0;
 }
 
+.otsikko {
+  padding-bottom: 1vw;
+}
+
 .box1, .box3 {
   height: 200px;
   width: 100%;
   background: transparent;
-  /* background: rgb(144, 100, 211);
-  background: linear-gradient(
-    0deg,
-    rgba(144, 100, 211, 1) 0%,
-    rgba(255, 112, 169, 0.6834532374100719) 100%
-  ); */
-
   box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
   -webkit-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
   -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
@@ -74,34 +71,19 @@ h2 {
   padding-bottom: 1rem;
 }
 
-.otsikko {
-  padding-bottom: 1vw;
-}
-
 /* map section */
 .nearby {
   margin: 2% 5%;
-  /* background: rgb(93, 232, 148);
-  background: linear-gradient(
-    185deg,
-    rgba(129, 238, 115, 0.675) 12%,
-    rgb(74, 189, 101) 79%
-  );
-
-  box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
-  -webkit-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
-  -moz-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58); */
 }
 
-app-map {
+.app-map {
   padding: 20px;
   position: relative;
 }
 
 /* list section*/
 .card-img-wrapper {
-  width: 255px;
-  height: 200px;
+  margin: 2%;
 }
 
 .card {
@@ -126,7 +108,6 @@ app-map {
 }
 
 .card-body {
-  /* text-decoration: none; */
   color: black;
 }
 
@@ -153,13 +134,16 @@ app-map {
     height: 150px;
   }
 
-  p {
+  .navTex p {
     height: 100px;
     padding-top: 35%;
   }
 
+  .col-md-8  {
+    border-bottom: 1px solid lightgray;
   }
 
+  }
 
   @media only screen and (max-width: 425px) {
 
@@ -171,6 +155,7 @@ app-map {
 
     .filter {
       margin: 0;
+      height: auto;
     }
 
     .col-lg-6 {
@@ -178,22 +163,19 @@ app-map {
     }
 
     .box a {
-      height: 100px;
-    }
-
-    a {
       width: 30%;
       background-color: transparent;
       padding: 0;
+      height: 100px;
     }
 
-    p {
+    .navTex p {
       font-size: 1rem;
       padding-top: 25%;
     }
 
-    .trending h2 {
-      font-size: 1.5rem;
+    .col-md-8  {
+      border-bottom: 1px solid lightgray;
     }
 
   }
