--- a/src/app/categories/events/events.component.css
+++ b/src/app/categories/events/events.component.css
@@ -82,23 +82,16 @@ h2 {
 /* map */
 .nearby {
   margin: 2% 5%;
-  /*background: rgb(93, 232, 148);
-  background: linear-gradient(
-  185deg,
-  rgba(129, 238, 115, 0.675) 12%,
-  rgb(74, 189, 101) 79%
-  ); */
+
 }
 
-app-map {
+.app-map {
   padding: 20px;
   position: relative;
 }
 
 /*list section */
 .card-img-wrapper {
-  /* width: 205px;
-  height: 200px; */
   margin: 2%;
 }
 
@@ -123,7 +116,6 @@ app-map {
 }
 
 .card-body {
-  /* text-decoration: none; */
   color: black;
 }
 
@@ -140,9 +132,6 @@ app-map {
     -moz-box-shadow: none;
     height: auto;
   }
-
-
-
 }
 
 @media only screen and (min-width: 426px) and (max-width: 768px) {
@@ -177,9 +166,7 @@ app-map {
     border-bottom: 1px solid lightgray;
   }
 
-
   }
-
 
 @media only screen and (max-width: 425px) {
 
