--- a/src/app/categories/activities/activities.component.css
+++ b/src/app/categories/activities/activities.component.css
@@ -62,7 +62,7 @@ h1 {
   font-weight: 700;
   text-align: center;
   padding: 30px;
-  margin-top: 25px;
+  margin-top: 40px;
   color: #fff;
 }
 
@@ -119,6 +119,7 @@ h2 {
   h1 {
     font-size: 2rem;
     padding: 2%;
+    margin-top: 10px;
   }
 
   h2 {
@@ -126,12 +127,11 @@ h2 {
   }
 
   .box a {
-    height: 150px;
+    height: 100px;
   }
 
-  .navTex p {
-    height: 100px;
-    padding-top: 35%;
+  .box p {
+    padding-top: 25%;
   }
 
   .col-md-8  {
@@ -158,7 +158,6 @@ h2 {
     }
 
     .box a {
-      width: 30%;
       background-color: transparent;
       padding: 0;
       height: 100px;
@@ -171,4 +170,4 @@ h2 {
     .col-md-8  {
       border-bottom: 1px solid lightgray;
   }
-  } 
+  }
