--- a/src/app/categories/events/events.component.css
+++ b/src/app/categories/events/events.component.css
@@ -43,12 +43,6 @@
   height: 200px;
   width: 100%;
   background: transparent;
-  /* background: rgb(144, 100, 211);
-  background: linear-gradient(
-    0deg,
-    rgba(144, 100, 211, 1) 0%,
-    rgba(255, 112, 169, 0.6834532374100719) 100%
-  ); */
 
   box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
   -webkit-box-shadow: 9px 8px 42px -14px rgba(0, 0, 0, 0.58);
@@ -70,7 +64,7 @@ h1 {
   font-weight: 700;
   text-align: center;
   padding: 30px;
-  margin-top: 25px;
+  margin-top: 40px;
   color: #fff;
 }
 
@@ -122,10 +116,15 @@ h2 {
 
   .filter {
     margin: 0;
+    height: 200px;
     box-shadow: none;
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
     height: auto;
+  }
+
+  .box p {
+    padding-top: 30%;
   }
 }
 
@@ -142,6 +141,7 @@ h2 {
   h1 {
     font-size: 2rem;
     padding: 2%;
+    margin-top: 10px;
   }
 
   h2 {
@@ -149,12 +149,11 @@ h2 {
   }
 
   .box a {
-    height: 150px;
+    height: 100px;
   }
 
-  .navText p {
-    height: 100px;
-    padding-top: 35%;
+  .box p {
+    padding-top: 25%;
   }
 
   .col-md-8  {
@@ -181,13 +180,12 @@ h2 {
     }
 
     .box a {
-      width: 30%;
       background-color: transparent;
       padding: 0;
       height: 100px;
     }
 
-    .navText p {
+    .box p {
       font-size: 1rem;
       padding-top: 25%;
     }
