--- a/src/app/categories/events/events.component.html
+++ b/src/app/categories/events/events.component.html
@@ -1,7 +1,7 @@
 <section class="filter">
   <div class="row">
     <div class="col-lg-6">
-      <h1>Tutustu lähiympäristösi tapahtumiin</h1>
+      <h1>Tutustu seutusi tapahtumiin</h1>
     </div>
     <div class="col-lg-6">
       <div class="box">
