--- a/src/app/frontpage/frontpage.component.html
+++ b/src/app/frontpage/frontpage.component.html
@@ -2,9 +2,7 @@
   <div class="row">
     <div class="col-lg-6" id="first-col">
       <h1>
-        Henkilökohtainen<br />
-        kaupunkioppaasi<br />
-        Helsingissä
+        Kaupunkioppaasi Helsingissä
       </h1>
     </div>
     <div class="col-lg-6">
