--- a/src/app/categories/activities/activityDetails/activity-details/activity-details.component.html
+++ b/src/app/categories/activities/activityDetails/activity-details/activity-details.component.html
@@ -21,6 +21,7 @@
       </div>
       <p class="mt-3 lead"> {{currentActivity.description.body | stripHTML}} </p>
       <a type="button" (click)="addFavourite()" class="btn btn-danger"><i class="bi bi-heart"></i> Lisää suosikkeihin</a>
+      <a (click)="addFav(currentActivity)" type="button" data-toggle="button" class="btn btn-outline-danger"><i class="bi bi-heart"></i> Lisää suosikkeihin</a>
     </div>
   </div>
 </div>
