--- a/src/app/categories/events/eventDetails/event-details/event-details.component.html
+++ b/src/app/categories/events/eventDetails/event-details/event-details.component.html
@@ -23,6 +23,7 @@
       </div>
         <p class="mt-3 lead"> {{currentEvent.description.body | stripHTML}} </p>
         <a type="button" (click)="addFavourite()" class="btn btn-danger"><i class="bi bi-heart"></i> Lisää suosikkeihin</a>
+        <a (click)="addFav(currentEvent)" type="button" data-toggle="button" class="btn btn-outline-danger"><i class="bi bi-heart"></i> Lisää suosikkeihin</a>
 
     <section class="nearby">
       <!-- <app-map></app-map> -->
