--- a/src/app/user-login/reset-password/reset-password.component.css
+++ b/src/app/user-login/reset-password/reset-password.component.css
@@ -1,9 +1,10 @@
 .row {
   margin: 0;
+  height: 100vh;
 }
 
 form{
-  margin-top: 15%;
+  margin-top: 10%;
   background: rgb(255, 220, 160);
   background: linear-gradient(
     185deg,
