--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,19 +6,45 @@
     <div id="logomobile">
       <a id="mobile" class="nav-link navbar-brand"  routerLink="/frontpage" routerLinkActive="active"><img src="../../assets/kopiomobile1.png" alt=""></a>
     </div>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <button
+    class="navbar-toggler"
+    type="button"
+    data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+    aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+    <div class="collapse navbar-collapse justify-content-end"
+     id="navbarSupportedContent">
       <ul class="navbar-nav">
         <li class="nav-item" id="weather">
             <a class="nav-link" id="temperature" routerLink="/weather" routerLinkActive="active"> Helsinki
               {{Weatherdata.current_temp}}°C<img class="weatherIcon" src="{{Weatherdata.current_icon}}" alt="icon">
               </a>
         </li>
-        <li class="nav-item" id="login">
+        </ul>
+        <ul class="nav navbar-nav">
+        <!-- <li class="nav-item" id="login">
           <a class="nav-link" routerLink="/login" routerLinkActive="active"><i class="fas fa-user fa-2x"></i></a>
-      </li>
+      </li> -->
+        <li *ngIf="!loggedin()" class="nav-item">
+          <a class="nav-link" routerLinkActive="active" routerLink="/register">Register</a>
+        </li>
+        <li *ngIf="!loggedin()" class="nav-item">
+          <a class="nav-link" routerLinkActive="active" routerLink="/login">Login</a>
+        </li>
+        <div *ngIf="loggedin()" class="dropdown mr-5" dropdown>
+          <a href="#" class="dropdown-toggle text-light" dropdownToggle (click)="false">Welcome</a>
+          <div class="dropdown-menu" *dropdownMenu>
+            <a href="#" class="dropdown-item">  <i class="far fa-user-circle"></i>My Profile</a>
+            <a href="#" class="dropdown-item">
+              <i class="fas fa-key"></i>Change Password</a>
+            <a href="#" class="dropdown-item">
+              <i class="fas fa-key"></i>My Favourites</a>
+              <a (click)='onLogout()' class="dropdown-item">
+                <i class="fas fa-sign-out-alt"></i> Logout</a>
+
+          </div>
+        </div>
       </ul>
     </div>
   </div>
