Add button for favourites

--- a/src/app/user-info/user-info.component.css
+++ b/src/app/user-info/user-info.component.css
@@ -39,3 +39,10 @@ button:hover {
 a {
   color: white;
 }
+.btn.btn-primary.btn-lg {
+  position: absolute;
+  left: 110%;
+  top: 50%;
+  color: black;
+  border-color: orange;
+}
