--- a/src/app/user-info/user-info.component.html
+++ b/src/app/user-info/user-info.component.html
@@ -26,6 +26,11 @@
                   class="btn btn-outline">Tallenna</button>
           <button type="submit"
                   class="btn btn-outline ml-2">Peruuta</button>
+                  <button class="nav-link" routerLinkActive="active" routerLink="/favourites"type="submit"
+                  class="btn btn-outline ml-2">Kirjaudu ulos</button>
       </form>
+      <button class="btn btn-primary btn-lg" routerLinkActive="active" routerLink="/favourites"type="submit"
+      >Suosikkini <i class="bi bi-heart"></i> </button>
   </div>
+
 </div>
